--- a/slides/index.html
+++ b/slides/index.html
@@ -27,7 +27,12 @@
 
 				<!-- SLIDE 1 title -->
 				<section>
-					<h1>PhyloProfile</h1>
+					<img src="images/logo.png" style='float: top; border:0; box-shadow:none' height="100"/>
+				</section>
+
+				<!-- SLIDE 1 title -->
+				<section>
+					<h1>Python and (biology) data analysis</h1>
 					<img src="images/logo.png" style='float: top; border:0; box-shadow:none' height="100"/>
 				</section>
 
