--- a/slides/index.html
+++ b/slides/index.html
@@ -89,6 +89,7 @@
 						<img src="images/022_logo.png" style='float: top; border:0' height=50/>
 						<p style="font-size:20px"><a target="_blank" href="https://github.com/BIONF/PhyloProfile/">https://github.com/BIONF/PhyloProfile/</a></p>
 						<img src="images/023_app.png" style='float: top; border:0' height=350/>
+						<p style="font-size:10px"><em><a target="_blank" href="https://doi.org/10.1093/bioinformatics/bty225">https://doi.org/10.1093/bioinformatics/bty225</a></em></p>
 					</section>
 					<section>
 						<p>Input file</p>
@@ -107,6 +108,7 @@
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>Method</strong></h5>
 					<section>
+						<p style="font-size:30px"><a target="_blank" href="https://omabrowser.org">https://omabrowser.org</a></p>
 						<img src="images/031_oma1.png" style='float: top; border:0' height=250>
 					</section>
 					<section>
@@ -116,7 +118,7 @@
 						<img src="images/033_oma3.png" style='float: top; border:0' height=500>
 					</section>
 					<section data-gif="repeat">
-						<p style="font-size:30px">Problem: large data set with 1605 proteins</p>
+						<p style="font-size:30px">Problem: large data set with 1605 <em>seed</em> proteins</p>
 						<img src="images/034_gif.gif" style='float: top; border:0' height=400/>
 					</section>
 					<section>
@@ -128,8 +130,7 @@
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>OMA API WITH PYTHON</strong></h5>
 					<section>
-						<p style="font-size:20px">The Jupiter Notebook</p>
-						<p style="font-size:20px">http://jupyter.org</p>
+						<p style="font-size:20px">Install the libraries</p>
 						<img src="images/041_install.png" style='float: top; border:0' height=200/>
 					</section>
 					<section>
@@ -203,8 +204,13 @@
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>Links</strong></h5>
 					<section>
-						<p style="font-size:30px">filtered data & sequences from main and customized profiles</p>
-						<p style="font-size:15px"><em>* If <a target="_blank" href="https://genomevolution.org/wiki/index.php/In-Paralog">in-paralogs</a> are present, option "Download representative sequences" will select only one sequence for each species for downloading</em></p>
+						<p style="font-size:25px">to this presentation</p>
+						<p style="font-size:25px"><a target="_blank" href="https://trvinh.github.io/python_experience/slides">https://trvinh.github.io/python_experience/slides</a></p>
+						<p style="font-size:25px">to the presented code</p>
+						<p style="font-size:25px"><a target="_blank" href="https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb">https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb</a></p>
+						<p style="font-size:25px">to me</p>
+						<p style="font-size:25px"><a target="_blank" href="mailto:tran@bio.uni-frankfurt.de">tran@bio.uni-frankfurt.de</a></p>
+
 						<img src="images/071_thanks.gif" style='float: top; border:0' height="150"/>
 					</section>
 				</section>
