--- a/slides/index.html
+++ b/slides/index.html
@@ -205,35 +205,13 @@
 					<h5 style="color: white; background-color: #559951"><strong>Links</strong></h5>
 					<section>
 						<p style="font-size:25px">to this presentation</p>
-						<p style="font-size:25px"><a target="_blank" href="https://trvinh.github.io/python_experience/slides">https://trvinh.github.io/python_experience/slides</a></p>
+						<p style="font-size:25px" class="fragment roll-in" ><a target="_blank" href="https://trvinh.github.io/python_experience/slides">https://trvinh.github.io/python_experience/slides</a></p>
 						<p style="font-size:25px">to the presented code</p>
-						<p style="font-size:25px"><a target="_blank" href="https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb">https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb</a></p>
+						<p style="font-size:25px" class="fragment roll-in"><a target="_blank" href="https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb">https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb</a></p>
 						<p style="font-size:25px">to me</p>
-						<p style="font-size:25px"><a target="_blank" href="mailto:tran@bio.uni-frankfurt.de">tran@bio.uni-frankfurt.de</a></p>
+						<p style="font-size:25px" class="fragment roll-in"><a target="_blank" href="mailto:tran@bio.uni-frankfurt.de">tran@bio.uni-frankfurt.de</a></p>
 
 						<img src="images/071_thanks.gif" style='float: top; border:0' height="150"/>
-					</section>
-				</section>
-
-				<!-- SLIDE 9 more-->
-				<section>
-					<h5 style="color: white; background-color: #559951"><strong>Summary</strong></h5>
-					<!-- <section>
-						<p style="font-size:30px">Demo video</p>
-						<iframe src="images/phyloprofile_20170712.mp4" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					</section> -->
-
-					<section>
-						<img src="images/posterSub.png" style='float: top; border:0; box-shadow:none' width="60%"/>
-						<p style="font-size:20px">Extensive documentation, FAQs and known bugs <a href="https://github.com/BIONF/PhyloProfile/wiki" target="_blank">are described on our GitHub wiki pages</a>.</p>
-					</section>
-
-					<section>
-						<p style="font-size:30px">Links</p>
-						<p style="font-size:20px">online version: <a target="_blank" href="https://phyloprofile.shinyapps.io/phyloprofile/">phyloprofile.shinyapps.io/phyloprofile</a></p>
-						<p style="font-size:20px">standalone version: <a target="_blank" href="https://github.com/trvinh/phyloprofile">github.com/BIONF/phyloprofile</a></p>
-						<p style="font-size:20px">contact: <a target="_blank" href="mailto:tran@bio.uni-frankfurt.de">tran@bio.uni-frankfurt.de</a></p>
-						<img src="images/logo.png" style='float: top; border:0; box-shadow:none' height="100"/>
 					</section>
 				</section>
 
