--- a/slides/index.html
+++ b/slides/index.html
@@ -27,7 +27,7 @@
 
 				<!-- SLIDE 1 title -->
 				<section>
-					<h2>PYTHON IN</h2>
+					<h2>FDOG</h2>
 					<h2>(BIOLOGY) DATA ANALYSIS</h2>
 					<hr>
 					<h4>14.05.2018</h4>
