--- a/slides/index.html
+++ b/slides/index.html
@@ -28,10 +28,10 @@
 				<!-- SLIDE 1 title -->
 				<section>
 					<h2>FDOG</h2>
-					<h2>(BIOLOGY) DATA ANALYSIS</h2>
+					<h2>WHY THIS NOT CHANGED???</h2>
 					<hr>
 					<h4>14.05.2018</h4>
-					<h4>Ngoc Vinh Tran</h4>
+					<h4>Vinh Tran</h4>
 				</section>
 
 				<!-- SLIDE 2 background -->
