--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>python_experience</title>
+		<title>fDOG presentation</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/beige.css" id=theme>
@@ -27,7 +27,7 @@
 
 				<!-- SLIDE 1 title -->
 				<section>
-					<h2>FDOG</h2>
+					<h2>fDOG</h2>
 					<h2>WHY THIS NOT CHANGED???</h2>
 					<hr>
 					<h4>14.05.2018</h4>
@@ -204,13 +204,6 @@
 				<section>
 					<h5 style="color: white; background-color: #559951"><strong>Links</strong></h5>
 					<section>
-						<p style="font-size:25px">to this presentation</p>
-						<p style="font-size:25px" class="fragment roll-in" ><a target="_blank" href="https://trvinh.github.io/python_experience/slides">https://trvinh.github.io/python_experience/slides</a></p>
-						<p style="font-size:25px">to the presented code</p>
-						<p style="font-size:25px" class="fragment roll-in"><a target="_blank" href="https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb">https://github.com/trvinh/python_experience/blob/gh-pages/oma-api.ipynb</a></p>
-						<p style="font-size:25px">to me</p>
-						<p style="font-size:25px" class="fragment roll-in"><a target="_blank" href="mailto:tran@bio.uni-frankfurt.de">tran@bio.uni-frankfurt.de</a></p>
-
 						<img src="images/071_thanks.gif" style='float: top; border:0' height="150"/>
 					</section>
 				</section>
