--- a/slides/index.html
+++ b/slides/index.html
@@ -26,11 +26,11 @@
 			<div class="slides">
 
 				<!-- SLIDE 1 title -->
-				<section>
+				<section data-background-image="images/012_pathway.png">
 					<h2>fDOG</h2>
-					<h2>WHY THIS NOT CHANGED???</h2>
+					<h2>Feature-aware Directed OrtholoG search</h2>
 					<hr>
-					<h4>14.05.2018</h4>
+					<h4>22.03.2021</h4>
 					<h4>Vinh Tran</h4>
 				</section>
 
