added group logo

--- a/slides/index.html
+++ b/slides/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 
 				<!-- SLIDE 1 title -->
-				<section data-background-image="images/012_pathway.png">
+				<section data-background-image="images/logo.png" data-background-position="10% 90%" data-background-size="10%">
 					<h2>fDOG</h2>
 					<h2>Feature-aware Directed OrtholoG search</h2>
 					<hr>
