--- a/slides/index.html
+++ b/slides/index.html
@@ -73,7 +73,6 @@
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit »S« on your keyboard).
 					</aside>
-
 				</section>
 
 				<!-- SLIDE 3 fdog origin -->
@@ -94,43 +93,54 @@
 						<img src="images/022_hamstr_workflow.png" style='float: top; border:0; box-shadow: none' height=350/>
 					</section>
 					<section>
+						<p>
+							<div style="width:500px; margin:0 auto;">
+								<div style="float:left; width:100 px"><iframe src="https://giphy.com/embed/fGCqvevBdwJdo4s1qb" width="120" height="120" frameBorder="0" class="giphy-embed" ></iframe></div>
+								+
+								<div style="float:right; width:100 px"><iframe src="https://giphy.com/embed/d1E2IByItLUuONMc" width="95" height="120" frameBorder="0" class="giphy-embed"></iframe></div>
+								<div style="float:center; width:100 px"><img src="images/023_arrow.png" style='float: center; border:0; box-shadow: none' height=100/></div>
+							</div>
+						</p>
+						<p>
+							<div style="float:center; margin:100 100; width:100 px"><iframe src="https://giphy.com/embed/3o7abAHdYvZdBNnGZq" width="240" height="240" frameBorder="0" class="giphy-embed" ></iframe></div>
+						</p>
 						<p>fDOG</p>
-						<div style="width:500px; margin:0 auto;">
-							<div style="float:left; width:100 px"><iframe src="https://giphy.com/embed/fGCqvevBdwJdo4s1qb" width="120" height="120" frameBorder="0" class="giphy-embed" ></iframe></div>
-							+
-							<div style="float:right; width:100 px"><iframe src="https://giphy.com/embed/d1E2IByItLUuONMc" width="95" height="120" frameBorder="0" class="giphy-embed"></iframe></div>
-						</div>
 					</section>
-
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit »S« on your keyboard).
 					</aside>
-
 				</section>
 
-				<!-- SLIDE 3 introduction -->
+				<!-- SLIDE 3 comparison -->
 				<section>
-					<h5 style="color: white; background-color: #559951"><strong>Introduction</strong></h5>
+					<h5 style="color: white; background-color: #559951"><strong>How good is fDOG</strong></h5>
 					<section>
-						<p>Phylogenetic profiles</p>
-						<img src="images/021_phyloprofile.png" style='float: top; border:0' height=200/>
+						<p>Benchmark data</p>
+						<img src="images/031_qfo.png" style='float: top; border:0' height=250/>
 						<p>
-							<p style="font-size:20px" class="fragment roll-in">Presence/absence pattern of genes across a set of taxa</p>
 							<ul>
-								<li style="font-size:20px" class="fragment roll-in">transfer functions between genes</li>
-								<li style="font-size:20px" class="fragment roll-in">trace functional protein clusters or metabolic networks across species</li>
+								<li style="font-size:20px">78 taxa QfO 2018</li>
+								<li style="font-size:20px">Human as reference species</li>
+								<li style="font-size:20px">20.996 human proteins as seed sequences</li>
 							</ul>
 						</p>
 					</section>
 					<section>
-						<img src="images/022_logo.png" style='float: top; border:0' height=50/>
-						<p style="font-size:20px"><a target="_blank" href="https://github.com/BIONF/PhyloProfile/">https://github.com/BIONF/PhyloProfile/</a></p>
-						<img src="images/023_app.png" style='float: top; border:0' height=350/>
-						<p style="font-size:10px"><em><a target="_blank" href="https://doi.org/10.1093/bioinformatics/bty225">https://doi.org/10.1093/bioinformatics/bty225</a></em></p>
+						<p>Benchmark method</p>
+						<p><img src="images/032_benchmark_service.png" style='float: top; border:0' height=50/></p>
+						<p><img src="images/033_benchmark_service.png" style='float: top; border:0; box-shadow: none' height=350/></p>
 					</section>
 					<section>
-						<p>Input file</p>
-						<img src="images/026_seqInput.png" style='float: top; border:0' height=250/ class="fragment roll-in">
+						<p>Result</p>
+						<p>
+							<ul>
+								<li style="font-size:20px">78 taxa QfO 2018</li>
+								<img src="images/034_coreSize.png" style='float: top; border:0' height=250/ class="fragment roll-in">
+								<li style="font-size:20px">Human as reference species</li>
+								<li style="font-size:20px">20.996 human proteins as seed sequences</li>
+							</ul>
+						</p>
+
 						<img src="images/024_orthoInput.png" style='float: top; border:0' height=250/ class="fragment roll-in">
 						<img src="images/025_annoInput.png" style='float: top; border:0' height=250/ class="fragment roll-in">
 						<img src="images/027_omaLogo.png" style='float: top; border:0' height=150 class="fragment roll-in">
@@ -141,39 +151,91 @@
 					</aside>
 				</section>
 
-				<!-- SLIDE 4 method -->
+				<!-- SLIDE 4 core groups -->
 				<section>
-					<h5 style="color: white; background-color: #559951"><strong>Method</strong></h5>
+					<h5 style="color: white; background-color: #559951"><strong>How meaningful are the core ortholog groups</strong></h5>
 					<section>
-						<p style="font-size:30px"><a target="_blank" href="https://omabrowser.org">https://omabrowser.org</a></p>
-						<img src="images/031_oma1.png" style='float: top; border:0' height=250>
+						<img src="images/041_qfotree.png" style='float: top; border:0; box-shadow: none' height=350/>
+						<p>... in reflecting the species relationship</p>
 					</section>
 					<section>
-						<img src="images/032_oma2.png" style='float: top; border:0' height=500>
+						<ul>
+							<li style="font-size:20px">
+								<p>Topology test with <a target="_blank" href="http://www.iqtree.org">IQ-TREE</a></p>
+								<img src="images/042_testOutput.png" style='float: top; border:0; box-shadow: none' height=150/>
+								<p style="font-size:15px">(Topology rejected (-) when p-AU < 0.05, otherwise accepted (+))</p>
+							</li>
+							<li style="font-size:20px" class="fragment roll-in">
+								<p>18,067 core groups with more than 3 sequences</p>
+								<img src="images/043_coreSize.png" style='float: top; border:0; box-shadow: none' height=200/>
+							</li>
+						</ul>
+						</p>
 					</section>
 					<section>
-						<img src="images/033_oma3.png" style='float: top; border:0' height=500>
-					</section>
-					<section data-gif="repeat">
-						<p style="font-size:30px">Problem: large data set with 1605 <em>seed</em> proteins</p>
-						<img src="images/034_gif.gif" style='float: top; border:0' height=400/>
+						<table style="font-size:20px">
+							<tr>
+								<th>Approach</th>
+								<th>Accepted</th>
+								<th>Rejected</th>
+							</tr>
+							<tr>
+								<td>No correction</td>
+								<td>11,707 (64.80%)</td>
+								<td>6,360 (35.20%)</td>
+							</tr>
+							<tr>
+								<td>Benjamini + Hochberg (BH) correction</td>
+								<td>13,625 (75.41%)</td>
+								<td>4,442 (24.59%)</td>
+							</tr>
+							<tr>
+								<td>Bonferroni correction</td>
+								<td>16,204 (88.69%)</td>
+								<td>2,043 (11.31%)</td>
+							</tr>
+						</table>
+						<img src="images/044_topoStat.png" style='float: top; border:0; box-shadow: none' height=300>
 					</section>
 					<section>
-						<img src="images/035_api.png" style='float: top; border:0' height=400>
+						<img src="images/045_pvalue_vs_dlogl.png" style='float: top; border:0; box-shadow: none' height=350>
+					</section>
+					<section>
+						<img src="images/046_concord.png" style='float: top; border:0; box-shadow: none' height=300>
 					</section>
 				</section>
 
-				<!-- SLIDE 5 OMA API WITH PYTHON -->
+				<!-- SLIDE 5 runtime -->
 				<section>
-					<h5 style="color: white; background-color: #559951"><strong>OMA API WITH PYTHON</strong></h5>
+					<h5 style="color: white; background-color: #559951"><strong>How fast is fDOG</strong></h5>
 					<section>
-						<p style="font-size:20px">Install the libraries</p>
-						<img src="images/041_install.png" style='float: top; border:0' height=200/>
+						<table style="font-size:20px">
+							<tr>
+								<th>Data set</th>
+								<th>Core compilation</th>
+								<th>Ortholog search</th>
+								<th>FAS calculation</th>
+							</tr>
+							<tr>
+								<td>20,995 proteins (*)</td>
+								<td>19 hrs</td>
+								<td>67.5 hrs</td>
+								<td>21 hrs</td>
+							</tr>
+							<tr>
+								<td>Q8WZ42 (**)</td>
+								<td>54 hrs</td>
+								<td>0.2 hrs</td>
+								<td>20.5 hrs</td>
+							</tr>
+						</table>
+						<p style="font-size:12px" align = "right"><i>
+							(*) <b>fdogs.run</b> using 64 CPUs on compute17 (2x AMD EPIC 7601 2.2Ghz, 32 cores)<br>
+							(**) <b>fdog.run</b> using 1 CPU on compute12 (intel i7-6700K 4.0Ghz)
+						</i></p>
 					</section>
 					<section>
-						<p style="font-size:20px">Get protein sequence</p>
-						<img src="images/042_getSeq1.png" style='float: top; border:0' width=750/>
-						<img src="images/042_getSeq2.png" style='float: top; border:0' width=600/ class="fragment roll-in">
+						<img src="images/051_hmsruntime.png" style='float: top; border:0; box-shadow: none' height=400>
 					</section>
 					<section>
 						<p style="font-size:20px">Get protein sequence</p>
